--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,4 @@ jobs:
           spec: 'src/phc.spec'
           requirements: 'src/requirements.txt'
           upload_exe_with_name: 'PickHackChew'
+          options: --noconsole
